--- a/views/doc/estimate2.html
+++ b/views/doc/estimate2.html
@@ -52,7 +52,7 @@
                     <div class="align-self-left"><%=your.EDATE%></div>
                     <div class="d-flex flex-row justify-content-between align-self-left" style="border-bottom: 1px dotted #333; width: 90%;">
                         <h4 class="mb-0"><b><%=your.COMPANY%></b></h4>
-                        <div class="text-nowrap">귀중</div>
+                        <div class="text-nowrap align-self-center">귀중</div>
                     </div>
                     <div class="align-self-left w-75" style="font-size: 12px; margin-top: -0px;">
                         <% if (your.TEL != '') { %>
